2008-05-07  Frank Ch. Eigler  <fche@elastic.org>

	PR 6492.
	* main.cxx (main): let -l imply -w.

2008-05-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 444886.  From <crquan@gmail.com>:
	* tapsets.cxx, translate.cxx: Add .../build/... to default debuginfo
	path, to ease search for hand-built kernels.

2008-05-01  Frank Ch. Eigler  <fche@elastic.org>

	PR 6474
	* configure.ac (--enable-pie): Add default option.
	* Makefile.am (stap* binaries): Use -fpie/-z relro/-z now as
	applicable.
	* configure, aclocal.m4, Makefile.in, doc/Makefile.in: Regenerated.

2008-04-30  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 6008
	* main.cxx (main): Increase the limitation of buffer size to 4095MB.
	* staprun.8.in: Ditto.

2008-04-29  Frank Ch. Eigler  <fche@elastic.org>

	PR 6466
	* elaborate.cxx
	(dead_stmtexpr_remover): Expand scope to kill far more
	side-effect-free statemnets, including if/for/foreach.
	(semantic_pass_opt4): Warn on elided function/probe bodies.
	(typeresolution_info::visit_target_symbol): Dump parse tree of
	resolution-challenged functions/probes.
	(*): Adapt to probe->body being a statement*
	rather than a block*.
	* tapsets.cxx (*): Ditto.
	* staptree.cxx (block::block ctor): New cons constructor.
	* staptree.h: Corresponding changes.

2008-04-29  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl): Added
	death event handlers to ensure that for every utrace_attach there
	is a corresponding utrace_detach.
	(utrace_derived_probe_group::emit_module_decls): Ditto.

2008-04-28  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (translate_pass): Don't #define TEST_MODE.

2008-04-26  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (common_probe_entryfn_prologue): Undo
	clear of overload-related context vars; add explanation why.

2008-04-25  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Simplify configuration defaults.

2008-04-29  David Smith  <dsmith@redhat.com>:ChangeLog
