@@ -1,3 +1,9 @@
+2008-05-09  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 6487.
+	* main.cxx (dwarf_query::build_blacklist): Add kernel/relay.c
+	and kernel/timer.c to probing blacklist.
+	
 2008-05-07  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 6492.
